# tinywindow-core

./: .env.example  .gitignore  API_MOCKING_FIX.md  ASYNCMOCK_FIX.md  CI_COMPLETE_SUMMARY.md  CI_FIXES_SUMMARY.md  CI_FIX_SUMMARY.md  CLIPPY_FIX.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.rust  FINAL_CI_FIX.md  FINAL_TEST_FIXES.md  IMPLEMENTATION.md  PYTEST_CONFIG_FIX.md  README.md  RUNBOOK.md  SUMMARY.md  TESTING.md  VERIFICATION.md  docker-compose.yml  schema.sql
.github/workflows/: lint.yml  test.yml
backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  reporter.py
backtesting/strategies/: __init__.py  test_mean_reversion.py  (+1 more)
contracts/: .solhint.json  hardhat.config.js  package-lock.json  package.json
docs/: BACKTESTING.md  MONITORING.md  PAPER_TRADING.md  SAFETY.md
execution-engine/: Cargo.toml
execution-engine/src/: crypto.rs  execution.rs  lib.rs  main.rs  signals.rs  storage.rs
execution-engine/tests/: integration_test.rs
monitoring/: alerts.yml  prometheus.yml
python-agent/: .coverage  Dockerfile  example.py  pyproject.toml  pytest.ini  ruff.toml
python-agent/tests/: conftest.py  test_agent.py  test_exchange.py  test_integration.py  test_llm.py  test_orchestrator.py  test_strategy.py
python-agent/tests/backtesting/: __init__.py  test_data_loader.py  test_engine.py  test_metrics.py  test_reporter.py
python-agent/tests/execution/: __init__.py  test_paper_trading.py  test_slippage_model.py
python-agent/tests/monitoring/: __init__.py  test_exporters.py  test_metrics.py
python-agent/tests/resilience/: __init__.py  test_circuit_breaker.py  test_fallback.py  test_retry.py  test_timeout.py
python-agent/tests/safety/: __init__.py  test_circuit_breaker.py  test_kill_switch.py  test_limits.py  test_validation.py
python-agent/tests/security/: __init__.py  test_encryption.py  test_key_rotation.py  test_rate_limiter.py  test_vault.py
python-agent/tinywindow/: __init__.py  agent.py  config.py  exchange.py  llm.py  orchestrator.py  strategy.py
python-agent/tinywindow/execution/: __init__.py  paper_portfolio.py  paper_trading.py  slippage_model.py
python-agent/tinywindow/monitoring/: __init__.py  exporters.py  metrics.py
python-agent/tinywindow/resilience/: __init__.py  circuit_breaker.py  fallback.py  retry.py  timeout.py
python-agent/tinywindow/safety/: __init__.py  circuit_breaker.py  kill_switch.py  limits.py  validation.py
python-agent/tinywindow/security/: __init__.py  encryption.py  key_rotation.py  rate_limiter.py  vault.py
(+8 files in other folders)
