[workspace]
members = ["execution-engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TinyWindow Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
